2A/05_Projet_GL/src/test/deca/context/valid/sans_objet/19_casting_int_float.deca
// Description :
//     faire un castring de int vers float 
// Resultats :
//    Valide 
//
// Historique :
// cree le 01/01/2024


{
    int x = 1;
    float f = x ;
}