2A/05_Projet_GL/src/test/deca/context/invalid/sans_objet/19_mod_bool_int.deca
// Description :
//      opération modulo entre boolean et int 
// Resultats :
//    Erreur Contexteulle : ligne 12 : l'opération % n'est pas possible entre 'int' et 'boolean'
//
// Historique :
// cree le 10/01/2024

{
    int x = 1;
    boolean b = true ;
    x%b;
}